fix alignment with settings

--- a/src/modules/blocks/event-price/style.pcss
+++ b/src/modules/blocks/event-price/style.pcss
@@ -82,10 +82,12 @@
 
 	.components-base-control__field {
 		display: flex;
+		align-items: center;
 	}
 
 	.components-base-control__label {
 		flex: auto;
+		margin-bottom: 0;
 	}
 
 	.components-text-control__input {
